Fixing nsbeta2+ bug 41718, the docshell did case sensitive string compares when it checked if the protocol of a URL was 'javascript', this broke upper and mixed cased javascript: URL's. r=shaver